--- a/style.css
+++ b/style.css
@@ -1,23 +1,56 @@
-#Boxes {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: rgba(71, 83, 83, 0.137);
+}
+
+header {
+    text-align: center;
+    background-color: #1d2229;
+    color: white;
+    padding: 25px 0px;
+    position: sticky;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+}
+
+main {
+    padding: 40px 20%;
+    display: flex;
+}
+#Option {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+    width: 30%;
+    margin-right: 50px;
+}
+#Option > button {
+    width: 80%;
+    margin: 0px auto;
+}
+
+#Grid {
+    flex: 1;
+
     width: 500px;
     height: 500px;
-
     border: black solid 0.5px;
-}
 
-.boxes-row {
-    flex: 1;
     display: flex;
+    flex-wrap: wrap;
 }
 
-.boxes-col {
-    flex: 1;
+.grid-element {
     background-color: white;
-    border: black solid 0.5px;
+    box-sizing: border-box;
 }
-
-.boxes-col:hover {
+/* 
+.grid-element:hover {
     background-color: black;
-}
+} */
